--- a/core/package.json
+++ b/core/package.json
@@ -56,7 +56,10 @@
     "@continuedev/openai-adapters": "file:../packages/openai-adapters",
     "@modelcontextprotocol/sdk": "^1.12.0",
     "@mozilla/readability": "^0.5.0",
+    "@octokit/openapi-types": "^25.1.0",
     "@octokit/rest": "^20.1.1",
+    "@types/lru-cache": "^7.10.9",
+    "@types/workerpool": "^6.4.7",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@xenova/transformers": "2.14.0",
     "adf-to-md": "^1.1.0",
